fix image size
otherwise it overflows

--- a/src/styles/default.scss
+++ b/src/styles/default.scss
@@ -5,3 +5,8 @@ pre > code {
   display: block;
   max-width: 572px;
 }
+
+main img {
+  max-width: 80%;
+  @extend .ms-4;
+}
